[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prefabs/chr.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/boss/Dimas.gd" type="Script" id=3]
[ext_resource path="res://Sounds/boss/Dimas/voice01.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/boss/Dimas/voice02.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.7093, 32 )

[node name="Dimas" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="chr" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 13 )
character = 3
chr_name = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="weapon" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 13 )

[node name="hello" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 16.0
bus = "Dialogs"

[node name="idle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 16.0
bus = "Dialogs"

[node name="shoot_time" type="Timer" parent="."]
process_mode = 0
wait_time = 2.5
one_shot = true

[node name="tnt_spawn" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0

[node name="hurtTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[connection signal="finished" from="hello" to="." method="_on_hello_finished"]
[connection signal="finished" from="idle" to="." method="_on_idle_finished"]
[connection signal="timeout" from="shoot_time" to="." method="_on_shoot_time_timeout"]
[connection signal="timeout" from="tnt_spawn" to="." method="_on_tnt_spawn_timeout"]
[connection signal="timeout" from="hurtTimer" to="." method="_on_hurtTimer_timeout"]
